SONARGO-140 Move integration tests into the private folder